# navigation-utilities

./: README.md  pyproject.toml  requirements.txt
docs/: conf.py  index.rst  modules.rst  navigation_utilities.rst  navigation_utilities.utils.rst
src/: nmea.py  oxts.py
src/navigation_utilities/: coordinate.py  gngga.py  nmea.py  oxts.py
src/navigation_utilities.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/navigation_utilities/utils/: time.py
src/utils/: coordinate.py
