[build-system]
requires = [
  "setuptools",
  "numpy>=1.24.1"
]
build-backend = "setuptools.build_meta"

[project]
name = "navigation-utilities"
version = "0.1.0"
authors = [
  { name="Pablo Dorrio Vazquez", email="pablo.dorrio.vazquez@gmail.com" },
]
description = "Collection of utilities for driverless navigation systems and gnss tools"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pablodorrio/navigation-utilities"
"Bug Tracker" = "https://github.com/pablodorrio/navigation-utilities/issues"